--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -42,13 +42,13 @@
 						<p>Dashboard </p>
 					</a>
 				</li>
+				<%if (user.role.includes("Admin")) {%>
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
 						<i class="fa fa-ellipsis-h"></i>
 					</span>
 					<h4 class="text-section">Admin</h4>
 				</li>
-				<%if (user.role.includes("Admin")) {%>
 				<li class="nav-item <% if (page.includes('/users/')) { %> active <% } %>">
 					<a href="/admin/users/list">
 						<i class="fa fa-users"></i>
@@ -185,7 +185,7 @@
 					</div>
 				</li>
 				<%}%>
-				<%if (user.role.includes("Admin") || user.role.includes("Warehouse NAS") || user.role.includes("Warehouse Fl")) {%>
+				<%if (user.role.includes("Admin") || user.role.includes("Warehouse") || user.role.includes("Warehouse")) {%>
 				<li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#fleet">
 						<i class="fas fa-truck"></i>
@@ -216,6 +216,12 @@
 							</li>
 						</ul>
 					</div>
+				</li>
+				<li class="nav-item <% if (page.includes('/shipper/')) { %> active <% } %>">
+					<a href="/warehouse/shipper/list">
+						<i class="fa fa-users"></i>
+						<p>Shippers </p>
+					</a>
 				</li>
 				<%}%>
 				<%if (user.role.includes("Admin") || user.role.includes("Store")) {%>
