--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -97,8 +97,8 @@
 										</a>
 									</li> -->
 							<li>
-								<a href="/warehouse/fll/package/create">
-									<span class="sub-item">Carrier Packages </span>
+								<a href="/warehouse/fll/awb/create">
+									<span class="sub-item">AirWay Bill</span>
 								</a>
 							</li>
 							<li>
