--- a/views/pages/admin/user/edit.ejs
+++ b/views/pages/admin/user/edit.ejs
@@ -41,7 +41,7 @@
           <div class="form-group form-show-validation row">
             <label for="mobile" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Mobile</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="number" class="form-control" id="mobile" name="mobile" placeholder="(xxx)-xxx-xxxx"
+              <input type="tel" class="form-control" id="mobile" name="mobile" placeholder="(xxx)-xxx-xxxx"
                 value='<%=userDetail.mobile %>'>
             </div>
           </div>
