--- a/views/pages/warehouse/awb/nodocs.ejs
+++ b/views/pages/warehouse/awb/nodocs.ejs
@@ -1,63 +1,72 @@
 <% layout('./shared/__template')%>
 <div class='gutters'>
   <div class='col-xl-12 col-lg-6 col-md-12 col-sm-12'>
-    <input type='hidden' id="mid" value="0" />
-    <input type='hidden' id="mtype" value="default" />
     <div class='card'>
       <div class="card-header col-md-12">
-        <h3><%=title%></h3>
+        <div class="card-title"><%=title%></div>
       </div>
       <div class="card-body">
-        <ul class="nav nav-pills nav-primary" id="myTab" role="tablist">
-
-          <!-- <li class="nav-item">
-                        <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                            aria-controls="profile" aria-selected="false" aria-expanded="false">FLL Warehouse</a>
-                    </li> -->
-
-
-        </ul>
-        <div class='row'>
-          <!-- <div class='col-md-12'><button class='btn btn-info pull-right'>Create Cube </button></div> -->
-
-        </div>
-
-        <div class="tab-content" id="myTabContent">
-
-          <div class="tab-pane active fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab"
-            aria-expanded="false">
-            <div class='row'>
-
-              <div class='col-md-12'>
-                <table id='packageTable' class='display table table-bordered table-head-bg-info table-hover'
-                  style='width:100%;'>
-                </table>
-              </div>
-            </div>
-          </div>
+        <div class="table-responsive">
+          <table id='packageTable' class='display table table-striped table-hover dataTable'>
+            <thead>
+              <tr>
+                <th>Date Received</th>
+                <th>PMB</th>
+                <th>Consignee</th>
+                <th>AWB</th>
+                <th>Description</th>
+                <th>Shipper</th>
+                <th>Carrier</th>
+                <th>Pieces</th>
+                <th>Weight</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% awbs.forEach(function(awb){%>
+              <tr data-record="<%= awb.id %>">
+                <td><%=awb.dateCreated%></td>
+                <td><%=awb.customer.pmb %></td>
+                <td><%=awb.customer.firstName + ' ' + awb.customer.lastName%></td>
+                <td><%=awb.id%></td>
+                <td><%=awb.note %></td>
+                <td><%=awb.shipper.name %></td>
+                <td><%=awb.carrier.name %></td>
+                <td><%=awb.packages.length %></td>
+                <td><%=awb.weight %></td>
+                <td>
+                  <a href='manage/<%=awb.id%>/get' class="btn btn-link btn-primary" data-toggle="tooltip"
+                    data-original-title="Edit"> <i class="fa fa-pen"></i> </a>
+                  <a class="btn btn-link btn-danger btn-rm-awb" data-toggle="modal" data-id="<%=awb.id%>"
+                    data-original-title="Delete" data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a>
+                </td>
+              </tr>
+              <%})%>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="modal fade" id="confirmPkgDel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+<div class="modal fade" id="confirm-delete-awb" tabindex="-1" role="dialog" aria-labelledby="confirm-del-title"
   aria-hidden="true" style="display: none;">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h2 class="modal-title" id="exampleModalLabel2">Confirmation Required</h2>
+        <h2 class="modal-title" id="confirm-del-title">Confirmation Required</h2>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
       <div class="modal-body">
         <input type='hidden' id='pkg-tracking' />
-        Are you sure you want to delete this package?
+        Are you sure you want to delete this AirWay Bill?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-danger rm-package" id='rmPackage'>Delete</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger rm-awb" id='rm-awb'>Delete</button>
       </div>
     </div>
   </div>
@@ -123,8 +132,4 @@
   </div>
 </div>
 
-<script>
-  var awbs = <% - JSON.stringify(records) %>;
-</script>
-
-<% block('scripts').append('<script src="/js/packages/no-docs-package.js"></script>')%>
+<% block('scripts').append('<script src="/js/warehouse/awb/nodocs.js"></script>')%>
