--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -98,12 +98,12 @@
 									</li> -->
 							<li>
 								<a href="/warehouse/fll/awb/create">
-									<span class="sub-item">AirWay Bill</span>
+									<span class="sub-item">Create AirWay Bill</span>
 								</a>
 							</li>
 							<li>
-								<a href="/warehouse/fll/awb/no-docs">
-									<span class="sub-item">No Docs</span>
+								<a href="/warehouse/fll/awb/list">
+									<span class="sub-item">AirWay Bills</span>
 								</a>
 							</li>
 							<li>
