--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -28,6 +28,8 @@
 	<link rel="stylesheet" href="/assets/css/atlantis.min.css">
 	<link rel="stylesheet" href="/assets/css/magnific-popup.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.2.0/sweetalert2.min.css">
+	<link rel="stylesheet" type="text/css"
+		href="https://unpkg.com/file-upload-with-preview@4.0.2/dist/file-upload-with-preview.min.css">
 </head>
 
 <body>
