--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -8,6 +8,7 @@
           <h4 class="card-title">Create New AirWay Bill</h4>
         </div>
         <div class="card-body">
+          <h3 class="card-title text-muted">Bill Content</h3>
           <div class="row">
             <div class="col-md-6">
               <input type='hidden' id="mid" value="0" />
@@ -66,21 +67,17 @@
                 </div>
               </div>
               <!-- <div class='form-group'>
-                    <label>SED Required</label>
-                    <input type='checkbox' class='form-control carrier' id="isSED" name='isSED' />
-                  </div> -->
-              <!-- <div class='form-group'>
-                    <label>Has Invocie</label>
-                    <input type='checkbox' class='form-control hasInvoice' id='hasInvoice' name='hasInvocie' />
-                  </div> -->
-
-              <div class="separator-solid"></div>
+                <a href="#" data-toggle="modal" data-target="#add-purchase-order-popup"> ADD Purchase
+                  Order </a>
+              </div> -->
               <div class="form-group form-show-validation row">
-                <label for="invFile" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Upload Invocie</label>
+                <label for="awbNotes" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Notes</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type='file' class='form-control' id='invFile' name='invFile' />
+                  <textarea type='text' class='form-control' id='note' name='note' required></textarea>
                 </div>
               </div>
+            </div>
+            <div class="col-md-6">
               <div class="form-group form-show-validation row">
                 <label for="invoiceNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Invoice #</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
@@ -95,29 +92,51 @@
                   <input type='hidden' value="0" id='sedRequired' />
                 </div>
               </div>
-              <!-- <div class='form-group'>
-                <a href="#" data-toggle="modal" data-target="#add-purchase-order-popup"> ADD Purchase
-                  Order </a>
-              </div> -->
               <div class="form-group form-show-validation row">
-                <label for="awbNotes" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Notes</label>
-                <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type='text' class='form-control' id='note' name='note' />
+                <label class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Upload Invoice</label>
+                <div class="col-md-8">
+                  <div class="custom-file-container" data-upload-id="invoice-upload-field">
+                    <label class="custom-file-container__custom-file">
+                      <input type="file" class="custom-file-container__custom-file__custom-file-input" id="invFile"
+                        name="invFile" accept="image/*" aria-label="Choose File">
+                      <input type="hidden" name="MAX_FILE_SIZE" value="512000" />
+                      <span class="custom-file-container__custom-file__custom-file-control"></span>
+                    </label>
+                    <div class="custom-file-container__image-preview my-2" style="overflow: hidden;"></div>
+                    <a href="#" class="custom-file-container__image-clear btn btn-round btn-danger float-right"
+                      title="Clear Invoice">Clear Invoice
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="row mr-2 mb-3">
-                <h2>Packages - <span class='awb'></span></h2>
-                <a href="#add-package-popup" class="btn btn-small btn-info btn-add-package ml-auto">Add Package</a>
-              </div>
-              <table id='packageTable' class='display table table-striped table-hover'>
+          </div>
+          <div class="separator-solid"></div>
+          <div class="d-flex mr-1">
+            <h3 class="card-title text-muted">Packages - <span class='package-info'>0 Pieces / 0.00 lbs</span></h3>
+            <a href="#add-package-popup" class="btn btn-info btn-round btn-add-package ml-auto mr-5">Add
+              Package</a>
+          </div>
+          <div class="row">
+            <div class="table-responsive mx-5 mt-3">
+              <table id='packageTable' class='display table table-striped table-hover w-100'>
+                <thead>
+                  <tr>
+                    <td><strong>Tracking No</strong></td>
+                    <td class="text-center"><strong>Description</strong></td>
+                    <td class="text-center"><strong>Dimension</strong></td>
+                    <td class="text-right"><strong>Weight</strong></td>
+                    <td></td>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
               </table>
             </div>
           </div>
         </div>
         <div class="card-action">
-          <button class="btn btn-primary" type="submit">Create AWB</button>
+          <button class="btn btn-primary btn-round" type="submit">Create AWB</button>
         </div>
       </div>
     </div>
@@ -160,14 +179,6 @@
           <option>Cooler</option>
           <option>Other</option>
         </select>
-      </div>
-      <div class='form-group'>
-        <label for="packageNo">Package No</label>
-        <div class='row'>
-          <div class='col-md-4'>
-            <input type='number' class='form-control weight' id='packageNo' name='packageNo' required />
-          </div>
-        </div>
       </div>
       <div class='form-group'>
         <label>Dimensions</label>
@@ -251,11 +262,28 @@
     </div>
   </div>
 </div>
-<script>
-  var rpackages = [];
-</script>
-<!-- <% block('scripts').append('<script src="/vendor/datatables/dataTables.min.js"></script>')%>
-<% block('scripts').append('<script src="/vendor/datatables/dataTables.bootstrap.min.js"></script>')%>
-<% block('scripts').append('<script src="/vendor/datatables/custom/fixedHeader.js"></script>')%> -->
+<div class="modal fade" id="confirmPkgDel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+  aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title" id="exampleModalLabel2">Confirmation Required</h2>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <input type='hidden' id='pkg-tracking' />
+        Are you sure you want to delete this package?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger rm-package" id='rmPackage'>Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
 
+<script src="https://unpkg.com/file-upload-with-preview@4.0.2/dist/file-upload-with-preview.min.js"></script>
+<% block('scripts').append('<script src="/assets/js/plugin/datatables/datatables.min.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/awb/create.js"></script>')%>
