--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -83,7 +83,7 @@
 					</select>
 					<button id='set-printer' class='btn btn-info btn-sm mt-1 pull-right mb-1'>SET</button>
 				</li> -->
-				<li class="nav-item <% if (page.includes('/warehouse/fll/')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/fll/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#warehouse">
 						<i class="fas fa-warehouse"></i>
 						<p>Warehouse FLL</p>
