--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -60,7 +60,8 @@
             <div class="separator-solid"></div>
             <div class="row">
               <div class="col-md-7">
-                <img src="<%=invoiceLink%>" style="border: 1px dashed; border-radius: 10px; width: 100%;">
+                <img src="<%=invoiceLink%>"
+                  style="border: 1px dashed; border-radius: 10px; width: 100%; min-width: 100%; min-height: 100px;">
               </div>
               <div class="col-md-5 mb-3 mb-md-0 transfer-to">
                 <h5 class="sub">Invoice</h5>
