--- a/views/pages/admin/user/list.ejs
+++ b/views/pages/admin/user/list.ejs
@@ -7,7 +7,7 @@
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a>
       </div>
       <div class="card-body">
-        <table class="table user-table m-0">
+        <table class="display table table-striped table-hover dataTable user-table">
           <thead>
             <tr>
               <th>Role</th>
