--- a/views/pages/warehouse/list-manifest.ejs
+++ b/views/pages/warehouse/list-manifest.ejs
@@ -1,13 +1,12 @@
 <% layout('./shared/__template')%>
 <div class='gutters'>
     <div class='col-xl-12 col-lg-6 col-md-12 col-sm-12'>
-
-
         <div class='card'>
             <div class="card-header col-md-12">
                 <div class='row'>
                     <div class='col-md-6'>
-                        <button class='btn btn-primary btn-lg col-md-12 create-manifest ' data-type='1'>Create Flight</button>
+                        <button class='btn btn-primary btn-lg col-md-12 create-manifest ' data-type='1'>Create
+                            Flight</button>
                     </div>
                     <div class='col-md-6'>
                         <!-- <button class='btn btn-primary btn-lg col-md-12 create-manifest' data-type='1'>Cargo 2</button> -->
