--- a/views/pages/admin/user/create.ejs
+++ b/views/pages/admin/user/create.ejs
@@ -41,6 +41,22 @@
             </div>
           </div>
           <div class="form-group form-show-validation row">
+            <label for="password" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Password
+              <span class="required-label">*</span></label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="password" class="form-control" id="password" name="password" placeholder="New Password"
+                required>
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
+            <label for="confirmPassword" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Confirm Password
+              <span class="required-label">*</span></label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="password" class="form-control" id='confirmPassword' name="confirmPassword"
+                placeholder="Confirm New Password" required>
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
             <label for="userRole" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Select User Permission
               <span class="required-label">*</span></label>
             <div class="col-lg-4 col-md-9 col-sm-8">
@@ -61,4 +77,5 @@
   </div>
 </form>
 
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/admin/user/create.js"></script>')%>
