--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -193,26 +193,30 @@
 						<p>Fleet Management</p>
 						<span class="caret"></span>
 					</a>
-					<div class="collapse <% if (page.includes('/fleet/')) { %> active <% } %>" id="fleet">
+					<div class="collapse <% if (page.includes('/fleet/')) { %> show <% } %>" id="fleet">
 						<ul class="nav nav-collapse">
+							<li <% if (page.includes('/fleet/driver/')) { %> class="active" <% } %>>
+								<a href="/fleet/driver/list">
+									<span class="sub-item">Drivers</span>
+								</a>
+							</li>
 							<li <% if (page.includes('/fleet/vehicle/')) { %> class="active" <% } %>>
 								<a href="/fleet/vehicle/list">
 									<span class="sub-item">Vehicles</span>
 								</a>
 							</li>
-							<li <% if (page.includes('/fleet/plane/')) { %> class="active" <% } %>>
-								<a href="/fleet/plane/list">
-									<span class="sub-item">Planes</span>
-								</a>
+							<li class="nav-item">
+								<hr class="border-top m-0">
 							</li>
+							<div class="separator-solid"></div>
 							<li <% if (page.includes('/fleet/pilot/')) { %> class="active" <% } %>>
 								<a href="/fleet/pilot/list">
 									<span class="sub-item">Pilots</span>
 								</a>
 							</li>
-							<li <% if (page.includes('/fleet/driver/')) { %> class="active" <% } %>>
-								<a href="/fleet/driver/list">
-									<span class="sub-item">Drivers</span>
+							<li <% if (page.includes('/fleet/plane/')) { %> class="active" <% } %>>
+								<a href="/fleet/plane/list">
+									<span class="sub-item">Planes</span>
 								</a>
 							</li>
 						</ul>
